delay opacity logo + back color header

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 }
 
 .App__header {
-  background-color: #2e2428;
+  background-color: #8f5c38;
   border-top: 1px dashed #fff9fb;
   border-bottom: 1px solid #fff9fb;
   padding: 0 2vw;
