--- a/src/App.css
+++ b/src/App.css
@@ -5,14 +5,16 @@
 .App {
   background-color: #fff9fb;
   font-family: "Montserrat", sans-serif;
-  color: #0a0a0a;
+  color: #08090a;
 }
 
 .App__header {
+  position: sticky;
+  top: 0;
+  z-index: 100;
   background-color: #8f5c38;
-  border-top: 1px dashed #fff9fb;
-  border-bottom: 1px solid #fff9fb;
-  padding: 0 2vw;
+  border-top: 1px solid #fff9fb;
+  box-shadow: 0px -10px 10px 10px rgba(0, 0, 0, 0.6);
 }
 
 .Header__logo {
@@ -25,5 +27,4 @@
   font-size: 2rem;
   font-weight: 600;
   color: #fff9fb;
-  padding: 1rem;
 }
