--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -1,9 +1,11 @@
 .Post {
   margin-top: 2rem;
   max-width: 700px;
-  /* border-radius: 4px; */
-  /* border: 1px solid #d1dadb; */
+  border-radius: 10px;
+  border: 2px solid #fff9fb;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.6);
+  background-color: #4f6d7a;
+  color: #fff9fb;
 }
 
 .Post__header {
