--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 .App {
   background-color: #dde3e4;
   color: #08090a;
-  letter-spacing: 1.1px;
+  letter-spacing: 1px;
 }
 
 .App__header {
@@ -13,7 +13,7 @@
   top: 0;
   z-index: 100;
   background-color: #8f5c38;
-  border-top: 1px solid #fff9fb;
+  border-bottom: 1px solid #fff9fb;
   box-shadow: 0px -10px 10px 10px rgba(0, 0, 0, 0.6);
   display: flex;
   justify-content: space-between;
@@ -30,6 +30,7 @@
   font-size: 2rem;
   font-weight: 600;
   color: #fff9fb;
+  letter-spacing: 1.4px;
 }
 
 .App__logContainer {
@@ -41,4 +42,43 @@
 
 .App__logButton {
   margin-left: 1vw;
+}
+
+.App__postsContainer {
+  padding-bottom: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.App__addPost {
+  position: fixed;
+  top: 7rem;
+  right: 3vw;
+}
+
+.App__addPostButton {
+  padding: 5px;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #8f5c38;
+  border-radius: 50%;
+  border: 2px solid #fff9fb;
+  transition: all 0.2s ease-in-out;
+}
+
+.App__addPostButton:hover {
+  transform: scale(1.2);
+}
+
+.App__notLogMessage {
+  width: 200px;
+  font-size: 0.8rem;
+  background-color: #08090ae3;
+  color: #fff9fb;
+  padding: 1rem;
+  border-radius: 4px;
 }
