--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -1,21 +1,24 @@
 .Post {
   margin-top: 2rem;
-  max-width: 700px;
-  border-radius: 10px;
-  border: 2px solid #fff9fb;
+  max-width: 400px;
+  border-radius: 4px;
+  border: 1px solid #fff9fb;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.6);
-  background-color: #4f6d7a;
   color: #fff9fb;
+  overflow: hidden;
 }
 
 .Post__header {
-  padding: 1rem 3vw;
+  padding: 0.6rem 1.4rem;
   display: flex;
   align-items: center;
+  background-color: #8f5c38;
 }
 .Post__avatar {
   width: 3rem;
-  margin-right: 3vw;
+  margin-right: 1rem;
+  border: 1px solid #fff9fb;
+  box-shadow: 0px 0px 5px -1px rgba(0, 0, 0, 0.6);
 }
 
 .Post__image {
@@ -26,6 +29,13 @@
 }
 
 .Post__text {
-  padding: 1rem 3vw;
+  padding: 0.6rem 1.4rem;
   font-weight: normal;
+  font-size: 0.8rem;
+  color: #08090a;
+}
+
+.Post__textUser {
+  font-size: 1rem;
+  margin-right: 1rem;
 }
