--- a/src/components/SideBar.css
+++ b/src/components/SideBar.css
@@ -3,10 +3,10 @@
   height: 200vh;
   position: fixed;
   top: 0;
-  left: 1.5vw;
+  margin-left: 1vw;
   box-sizing: border-box;
-  border-left: 2px dashed #08090ae3;
-  border-right: 2px solid #08090ae3;
+  border-left: 2px dashed #bbc7c9;
+  border-right: 2px solid #bbc7c9;
   animation: up-sidebar 2.5s cubic-bezier(0.77, 0.07, 0.32, 1),
     loop-sidebar 20s linear infinite;
 }
