--- a/src/components/ImageUpload.css
+++ b/src/components/ImageUpload.css
@@ -1,16 +1,18 @@
 .ImageUpload__progressBar {
-  width: 100%;
+  width: 90%;
   margin-bottom: 1rem;
-  border-radius: 32px;
+  border-radius: 36px;
   background-color: #fff9fb;
-  border: 1px solid #dde3e4;
+  border: none;
+  overflow: hidden;
+  box-shadow: inset 0 0 7px -3px #524f54;
 }
 
 .ImageUpload__caption {
-  width: 50vw;
-  padding: 5px 8px;
+  width: 87%;
+  padding: 4px 6px;
   border-radius: 4px;
-  border: none;
+  border: 1px solid #524f54;
   font-family: inherit;
   font-size: 0.8em;
   margin-bottom: 1rem;
