--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -1,10 +1,10 @@
 .Post {
-  margin-top: 2rem;
-  max-width: 400px;
+  max-width: 500px;
+  margin-bottom: 2rem;
   border-radius: 4px;
-  border: 1px solid #fff9fb;
+  /* border: 1px solid #bbc7c9; */
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.6);
-  color: #fff9fb;
+  color: #08090a;
   overflow: hidden;
 }
 
@@ -12,12 +12,12 @@
   padding: 0.6rem 1.4rem;
   display: flex;
   align-items: center;
-  background-color: #8f5c38;
+  background-color: #fff9fb;
+  font-size: 0.9rem;
 }
 .Post__avatar {
   width: 3rem;
   margin-right: 1rem;
-  border: 1px solid #fff9fb;
   box-shadow: 0px 0px 5px -1px rgba(0, 0, 0, 0.6);
 }
 
@@ -36,6 +36,37 @@
 }
 
 .Post__textUser {
-  font-size: 1rem;
+  font-size: 0.9rem;
   margin-right: 1rem;
+}
+
+.Post__comment {
+  background-color: #fff9fb;
+  display: flex;
+}
+.Post__comment input {
+  flex: 1;
+  padding: 0.6rem 1.4rem;
+  border-top: 1px solid #bbc7c9;
+  border-bottom: 1px solid #bbc7c9;
+  border-left: none;
+  border-right: none;
+  width: 100%;
+  font-size: 0.8rem;
+  outline: none;
+}
+
+.Post__button {
+  flex: 0;
+  border: 1px solid #bbc7c9;
+  background-color: #bbc7c9;
+  cursor: pointer;
+  color: #08090a;
+}
+
+.Post__comments p {
+  padding: 0.6rem 1.4rem;
+  font-size: 0.8rem;
+  border-bottom: 1px solid #bbc7c9;
+  background-color: #fff9fb;
 }
