--- a/src/components/ImageUpload.css
+++ b/src/components/ImageUpload.css
@@ -1,21 +1,10 @@
 .ImageUpload__progressBar {
-  width: 90%;
   margin-bottom: 1rem;
   border-radius: 36px;
   background-color: #fff9fb;
-  border: none;
+  border: 1px solid rgba(0, 0, 0, 0.23);
   overflow: hidden;
-  box-shadow: inset 0 0 7px -3px #524f54;
-}
-
-.ImageUpload__caption {
-  width: 87%;
-  padding: 4px 6px;
-  border-radius: 4px;
-  border: 1px solid #524f54;
-  font-family: inherit;
-  font-size: 0.8em;
-  margin-bottom: 1rem;
+  width: 100%;
 }
 
 .ImageUpload__file {
