--- a/src/components/Logo.css
+++ b/src/components/Logo.css
@@ -24,49 +24,49 @@
   border-radius: 50%;
   padding: 1px;
 }
-.circle1 {
+.circle__1 {
   width: 52px;
   height: 52px;
   border: 2px dashed rgba(255, 249, 251, 1);
   animation: opacity-circle 2s ease-in-out 0.1s both,
     rotate 7s cubic-bezier(0.7, 0.1, 0.3, 1.2) 1.1s infinite alternate-reverse;
 }
-.circle2 {
+.circle__2 {
   width: 46px;
   height: 46px;
   border: 1px solid rgba(255, 249, 251, 0.85);
   animation: opacity-circle 2s ease-in-out 0.2s both,
     rotate 6s cubic-bezier(0.7, 0.1, 0.3, 1.2) 1.2s infinite alternate-reverse;
 }
-.circle3 {
+.circle__3 {
   width: 40px;
   height: 40px;
   border: 1px dashed rgba(255, 249, 251, 0.6);
   animation: opacity-circle 2s ease-in-out 0.3s both,
     rotate 5s cubic-bezier(0.7, 0.1, 0.3, 1.2) 1.3s infinite alternate-reverse;
 }
-.circle4 {
+.circle__4 {
   width: 34px;
   height: 34px;
   border: 1px solid rgba(255, 249, 251, 0.45);
   animation: opacity-circle 2s ease-in-out 0.4s both,
     rotate 4s cubic-bezier(0.7, 0.1, 0.3, 1.2) 1.4s infinite alternate-reverse;
 }
-.circle5 {
+.circle__5 {
   width: 27px;
   height: 27px;
   border: 1px dashed rgba(255, 249, 251, 0.3);
   animation: opacity-circle 2s ease-in-out 0.5s both,
     rotate 3s cubic-bezier(0.7, 0.1, 0.3, 1.2) 1.5s infinite alternate-reverse;
 }
-.circle6 {
+.circle__6 {
   width: 20px;
   height: 20px;
   border: 1px solid rgba(255, 249, 251, 0.2);
   animation: opacity-circle 2s ease-in-out 0.6s both,
     rotate 2.5s cubic-bezier(0.7, 0.1, 0.3, 1.2) 1.6s infinite alternate-reverse;
 }
-.circle7 {
+.circle__7 {
   width: 12px;
   height: 12px;
   border: 1px dashed rgba(255, 249, 251, 1);
